Fix 3D Render Capture crashed issue

m_pendingRenderCaptureSendRequests is touched by different threads
from Renderer::jobsDone and Renderer::executeCommandsSubmission.

It causes Assert and crashes and shuould be protected with mutex.

Task-number: QTBUG-104592
Change-Id: I489691caeba2772f544fe1e4716053caf9492696
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit ebc966272a8aee4b783645d52f13a88b652200b9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>